Add a password generator

--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -30,10 +30,14 @@
                         <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}" />
                         <TextBlock TextWrapping="Wrap">The password or passphrase must have between 0 and 10 million Unicode characters. The 256 bit AES encryption key will be derived from the password using SHA-256 and Bcrypt hash algorithms.</TextBlock>
                         <TextBlock />
-                        <TextBlock>Password, please type or paste:</TextBlock>
-                        <PasswordBox Name="PwBox" PasswordChanged="Password_Changed" x:FieldModifier="private" />
-                        <TextBlock>Password, please repeat:</TextBlock>
-                        <PasswordBox Name="PwBox2" PasswordChanged="Password2_Changed" x:FieldModifier="private" />
+                        <TextBlock>Password/-phrase, please type or paste:</TextBlock>
+                        <TextBox Name="PwBox" TextChanged="Password_Changed" x:FieldModifier="private" 
+                                 AcceptsTab="False"
+                                 TextWrapping="Wrap"
+                                 VerticalScrollBarVisibility="Visible"
+                                 AcceptsReturn="True" />
+                        <TextBlock><Hyperlink Click="Hyperlink_CreatePassword_OnClick">Generate Password</Hyperlink></TextBlock>
+                      
 
                     </StackPanel>
                 </Grid>
