--- a/VisualCrypt.Desktop/Views/EncryptedBar.xaml
+++ b/VisualCrypt.Desktop/Views/EncryptedBar.xaml
@@ -2,14 +2,46 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:files="clr-namespace:VisualCrypt.Desktop.Shared.Files;assembly=VisualCrypt.Desktop.Shared"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary
-            Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/InUse/DialogStyles.xaml" />
+            Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/InUse/BarStyles.xaml" />
     </UserControl.Resources>
     <Grid>
-            <TextBlock>Encrypted</TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.Column="0" Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=EncrytedBarText}" />
+        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+            <TextBlock>
+                <Hyperlink Click="Hyperlink_SetPassword_Click">
+                    <Run Text="{Binding Source={x:Static files:PasswordManager.PasswordInfo}, Path=PasswordStatus, Mode=OneWay}" />
+                </Hyperlink>
+                <Hyperlink  Click="Hyperlink_ClearPassword_MouseDown">
+                    <TextBlock Padding="0" Margin="0" FontWeight="Normal" FontFamily="WebDings" Visibility="{Binding Source={x:Static files:PasswordManager.PasswordInfo}, Path=TextBlockClearPasswordVisibility}">
+                        r</TextBlock>
+                </Hyperlink>
+            </TextBlock>
+        </StackPanel>
+        <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+            <TextBlock>
+                <Hyperlink Click="Hyperlink_CopyAll_Click">Copy to Clipboard
+                </Hyperlink>
+                <Run xml:space="preserve"> </Run>
+                <Hyperlink  Click="Hyperlink_Decrypt_Click">
+                  Decrypt
+                </Hyperlink>
+                 <Run xml:space="preserve"> </Run>
+                 <Hyperlink  Click="Hyperlink_Save_Click" IsEnabled="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=IsDirty}">
+                  Save
+                </Hyperlink>
+                 <Run xml:space="preserve"> </Run>
+            </TextBlock>
+        </StackPanel>
     </Grid>
 </UserControl>
