Rework Password Dialog, implement proposed PW Spec

--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -5,6 +5,7 @@
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
                     xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
+                    xmlns:app="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
                     mc:Ignorable="d"
                     Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
                     d:DataContext="{d:DesignInstance views:SetPasswordDialog}"
@@ -28,15 +29,22 @@
                 <Grid x:Name="ContentRow" Grid.Row="0">
                     <StackPanel HorizontalAlignment="Stretch">
                         <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}" />
-                        <TextBlock TextWrapping="Wrap">The password or passphrase must have between 0 and 10 million Unicode characters. The 256 bit AES encryption key will be derived from the password using SHA-256 and Bcrypt hash algorithms.</TextBlock>
-                        <TextBlock />
-                        <TextBlock>Password/-phrase, please type or paste:</TextBlock>
+                        <DockPanel  HorizontalAlignment="Stretch">
+                            <TextBlock HorizontalAlignment="Left">Password/-phrase:</TextBlock>
+                            <TextBlock HorizontalAlignment="Right" Text="{Binding SignificantCharCountText}"/>
+                        </DockPanel>
                         <TextBox Name="PwBox" TextChanged="Password_Changed" x:FieldModifier="private" 
                                  AcceptsTab="False"
                                  TextWrapping="Wrap"
                                  VerticalScrollBarVisibility="Visible"
-                                 AcceptsReturn="True" />
-                        <TextBlock><Hyperlink Click="Hyperlink_CreatePassword_OnClick">Generate Password</Hyperlink></TextBlock>
+                                 AcceptsReturn="True"
+                                 Height="70"  MaxHeight="70"/>
+                        <TextBlock><Hyperlink Click="Hyperlink_CreatePassword_OnClick">Generate Password</Hyperlink> from 256 Bit Random Data.</TextBlock>
+                        <TextBlock />
+                        <TextBlock>Read more about <Hyperlink ToolTip="{Binding Source={x:Static app:Constants.PWSpecUrl}, Mode=OneWay}" Click="Hyperlink_ReadPWSpec_OnClick">VisualCrypt Passwords</Hyperlink>.</TextBlock>
+                      
+                      
+                       
                       
 
                     </StackPanel>
